minor formattin updates

--- a/OKC_Thunder_DSS_Project/OKC_Thunder_DSS_Project.Rmd
+++ b/OKC_Thunder_DSS_Project/OKC_Thunder_DSS_Project.Rmd
@@ -141,7 +141,7 @@ loadAwardsData <- function() {
 ##################################################################
 ################   Load Player Stats Total Data   ################
 ##################################################################
-loadTotalsData <- function(yr_start, yr_end, normalize) {
+loadTotalsData <- function(yr_start, yr_end) {
   # creating final data frame and setting variable types for the columns
   df <- data.frame(Rk = integer(),Player = character(),Pos = character(),Age = double(),
                    Tm = character(),GP = double(),GS = double(),MP = double(),FGM = double(),
@@ -257,7 +257,7 @@ loadTotalsData <- function(yr_start, yr_end, normalize) {
 ##################################################################
 ##############   Load Player Stats Per Game Data   ###############
 ##################################################################
-loadPerGameData <- function(yr_start, yr_end, normalize) {
+loadPerGameData <- function(yr_start, yr_end) {
   # creating final data frame and setting variable types for the columns
   df <- data.frame(Rk = integer(),Player = character(),Pos = character(),Age = double(),Tm = character(),
                    GP = double(),GS = double(),MP = double(),FGM = double(),FGA = double(),FGperc = double(),
@@ -318,86 +318,21 @@ loadPerGameData <- function(yr_start, yr_end, normalize) {
   
   # fix team formatting: map team abbreviations with full team name
   # standings have full team name, player stats have abbreviated
-  abbrev <- c("ATL","BOS",
-      "BRK",
-      "CHA",
-      "CHH",
-      "CHI",
-      "CHO",
-      "CLE",
-      "DAL",
-      "DEN",
-      "DET",
-      "GSW",
-      "HOU",
-      "IND",
-      "LAC",
-      "LAL",
-      "MEM",
-      "MIA",
-      "MIL",
-      "MIN",
-      "NJN",
-      "NOH",
-      "NOK",
-      "NOP",
-      "NYK",
-      "OKC",
-      "ORL",
-      "PHI",
-      "PHO",
-      "POR",
-      "SAC",
-      "SAS",
-      "SEA",
-      "TOR",
-      "UTA",
-      "VAN",
-      "WAS",
-      "WSB"
-    )
+  abbrev <- c("ATL","BOS","BRK","CHA","CHH","CHI","CHO","CLE","DAL","DEN","DET","GSW","HOU",
+              "IND","LAC","LAL","MEM","MIA","MIL","MIN","NJN","NOH","NOK","NOP","NYK","OKC",
+              "ORL","PHI","PHO","POR","SAC","SAS","SEA","TOR","UTA","VAN","WAS","WSB")
   
-  fullnames <-
-    c(
-      "Atlanta Hawks",
-      "Boston Celtics",
-      "Brooklyn Nets",
-      "Charlotte Bobcats",
-      "Charlotte Hornets",
-      "Chicago Bulls",
-      "Charlotte Hornets",
-      "Cleveland Cavaliers",
-      "Dallas Mavericks",
-      "Denver Nuggets",
-      "Detroit Pistons",
-      "Golden State Warriors",
-      "Houston Rockets",
-      "Indiana Pacers",
-      "Los Angeles Clippers",
-      "Los Angeles Lakers",
-      "Memphis Grizzlies",
-      "Miami Heat",
-      "Milwaukee Bucks",
-      "Minnesota Timberwolves",
-      "New Jersey Nets",
-      "New Orleans Hornets",
-      "New Orleans/Oklahoma City Hornets",
-      "New Orleans Pelicans",
-      "New York Knicks",
-      "Oklahoma City Thunder",
-      "Orlando Magic",
-      "Philadelphia 76ers",
-      "Phoenix Suns",
-      "Portland Trail Blazers",
-      "Sacramento Kings",
-      "San Antonio Spurs",
-      "Seattle SuperSonics",
-      "Toronto Raptors",
-      "Utah Jazz",
-      "Vancouver Grizzlies",
-      "Washington Wizards",
-      "Washington Bullets"
-    )
+  fullnames <- c("Atlanta Hawks","Boston Celtics","Brooklyn Nets","Charlotte Bobcats",
+                 "Charlotte Hornets","Chicago Bulls","Charlotte Hornets","Cleveland Cavaliers",
+                 "Dallas Mavericks","Denver Nuggets","Detroit Pistons","Golden State Warriors",
+                 "Houston Rockets","Indiana Pacers","Los Angeles Clippers","Los Angeles Lakers",
+                 "Memphis Grizzlies","Miami Heat","Milwaukee Bucks","Minnesota Timberwolves",
+                 "New Jersey Nets","New Orleans Hornets","New Orleans/Oklahoma City Hornets",
+                 "New Orleans Pelicans","New York Knicks","Oklahoma City Thunder","Orlando Magic",
+                 "Philadelphia 76ers","Phoenix Suns","Portland Trail Blazers","Sacramento Kings",
+                 "San Antonio Spurs","Seattle SuperSonics","Toronto Raptors","Utah Jazz",
+                 "Vancouver Grizzlies","Washington Wizards","Washington Bullets")
+  # index full team names by its abbreviation
   names(fullnames) <- abbrev
   
   # add team wins to player data
@@ -405,18 +340,16 @@ loadPerGameData <- function(yr_start, yr_end, normalize) {
   for (team_abbrev in levels(as.factor(df$Tm))) {
     for (season in levels(as.factor(df$Season))) {
       team_name <- fullnames[team_abbrev]
-      team_roster <-
-        df[which(as.character(df$Tm) == team_abbrev &
-                   as.character(df$Season) == season), ]
+      # get all players on the team during that season
+      team_roster <- df[which(as.character(df$Tm) == team_abbrev &
+                              as.character(df$Season) == season), ]
       if (dim(team_roster)[1] != 0) {
-        team_roster$TeamWins <-
-          data_standings[which(
-            as.character(data_standings$Team) == team_name &
-              as.character(data_standings$Season) == season
-          ), ]$Wins
+        # assign team wins from data_standings dataframe to roster
+        team_roster$TeamWins <- data_standings[which(as.character(data_standings$Team) == team_name &
+                                                     as.character(data_standings$Season) == season), ]$Wins
       }
-      df[which(as.character(df$Tm) == team_abbrev &
-                 as.character(df$Season) == season), ] <- team_roster
+      # overrite roster in df with team wins
+      df[which(as.character(df$Tm) == team_abbrev & as.character(df$Season) == season), ] <- team_roster
     }
   }
   df$TeamWins <- type.convert(df$TeamWins)
@@ -438,45 +371,20 @@ loadPerGameData <- function(yr_start, yr_end, normalize) {
 ##################################################################
 ##############   Load Player Advancded Stats Data   ##############
 ##################################################################
-loadAdvancdedData <- function(yr_start, yr_end, normalize) {
+loadAdvancdedData <- function(yr_start, yr_end) {
   # creating final data frame and setting variable types for the columns
-  df <-
-    data.frame(
-      Rk = integer(),
-      Player = character(),
-      Pos = character(),
-      Age = double(),
-      Tm = character(),
-      GP = integer(),
-      MP = double(),
-      PER = double(),
-      TSperc = double(),
-      ThreePAr = double(),
-      FTr = double(),
-      ORBperc = double(),
-      DRBperc = double(),
-      TRBperc = double(),
-      ASTperc = double(),
-      STLperc = double(),
-      BLKperc = double(),
-      TOVperc = double(),
-      USGperc = double(),
-      OWS = double(),
-      DWS = double(),
-      WS = double(),
-      WSper48 = double(),
-      OBPM = double(),
-      DBPM = double(),
-      BPM = double(),
-      VORP = double(),
-      Season = integer()
-    )
+  df <- data.frame(Rk = integer(),Player = character(),Pos = character(),Age = double(),Tm = character(),
+                   GP = integer(),MP = double(),PER = double(),TSperc = double(),ThreePAr = double(),
+                   FTr = double(),ORBperc = double(),DRBperc = double(),TRBperc = double(),ASTperc = double(),
+                   STLperc = double(),BLKperc = double(),TOVperc = double(),USGperc = double(),OWS = double(),
+                   DWS = double(),WS = double(),WSper48 = double(),OBPM = double(),DBPM = double(),
+                   BPM = double(),VORP = double(),Season = integer())
   
   # loop through each year's csv file and load data
   for (year in yr_start:yr_end) {
     file_pth <- paste("player_stats_advanced/", year, ".csv", sep = "")
-    df.temp <-
-      read.csv(file_pth, header = TRUE, stringsAsFactors = FALSE)
+    df.temp <- read.csv(file_pth, header = TRUE, stringsAsFactors = FALSE)
+    
     df.temp$Season <- year
     
     # reading player names from Basketball Reference csv gives format 'Chris Paul\paulch01'
@@ -492,38 +400,13 @@ loadAdvancdedData <- function(yr_start, yr_end, normalize) {
     }
     
     # rename column names
-    df.temp <-
-      data.frame(
-        Rk = df.temp$Rk,
-        Player = df.temp$Player,
-        Pos = df.temp$Pos,
-        Age = df.temp$Age,
-        Tm = df.temp$Tm,
-        GP = df.temp$G,
-        MP = df.temp$MP,
-        PER = df.temp$PER,
-        TSperc = df.temp$TS.,
-        ThreePAr = df.temp$X3PAr,
-        FTr = df.temp$FTr,
-        ORBperc = df.temp$ORB.,
-        DRBperc = df.temp$DRB.,
-        TRBperc = df.temp$TRB.,
-        ASTperc = df.temp$AST.,
-        STLperc = df.temp$STL.,
-        BLKperc = df.temp$BLK.,
-        TOVperc = df.temp$TOV.,
-        USGperc = df.temp$USG.,
-        OWS = df.temp$OWS,
-        DWS = df.temp$DWS,
-        WS = df.temp$WS,
-        WSper48 = df.temp$WS.48,
-        OBPM = df.temp$OBPM,
-        DBPM = df.temp$DBPM,
-        BPM = df.temp$BPM,
-        VORP = df.temp$VORP,
-        Season = df.temp$Season,
-        stringsAsFactors = FALSE
-      )
+    df.temp <- data.frame(Rk = df.temp$Rk,Player = df.temp$Player,Pos = df.temp$Pos,Age = df.temp$Age,
+                          Tm = df.temp$Tm,GP = df.temp$G,MP = df.temp$MP,PER = df.temp$PER,TSperc = df.temp$TS.,
+                          ThreePAr = df.temp$X3PAr,FTr = df.temp$FTr,ORBperc = df.temp$ORB.,DRBperc = df.temp$DRB.,
+                          TRBperc = df.temp$TRB.,ASTperc = df.temp$AST.,STLperc = df.temp$STL.,BLKperc = df.temp$BLK.,
+                          TOVperc = df.temp$TOV.,USGperc = df.temp$USG.,OWS = df.temp$OWS,DWS = df.temp$DWS,
+                          WS = df.temp$WS,WSper48 = df.temp$WS.48,OBPM = df.temp$OBPM,DBPM = df.temp$DBPM,
+                          BPM = df.temp$BPM,VORP = df.temp$VORP,Season = df.temp$Season,stringsAsFactors = FALSE)
     
     # combine all seasons into one large data frame
     df <- data.frame(rbind(df, df.temp))
@@ -534,14 +417,10 @@ loadAdvancdedData <- function(yr_start, yr_end, normalize) {
   df$AllNba <- FALSE
   df$TotalAllNba <- 0
   for (i in 1:dim(winners)[1]) {
-    df[which(
-      as.character(df$Player) == as.character(winners$Player[i]) &
-        as.integer(df$Season) == winners$Season[i]
-    ), ]$AllNba <- TRUE
-    df[which(
-      as.character(df$Player) == as.character(winners$Player[i]) &
-        as.integer(df$Season) == winners$Season[i]
-    ), ]$TotalAllNba <- 1
+    df[which(as.character(df$Player) == as.character(winners$Player[i]) &
+             as.integer(df$Season) == winners$Season[i]), ]$AllNba <- TRUE
+    df[which(as.character(df$Player) == as.character(winners$Player[i]) &
+             as.integer(df$Season) == winners$Season[i]), ]$TotalAllNba <- 1
   }
   
   # remove TOT seasons (rows that consolidated totals for players who played for multiple teams in 1 season)
@@ -549,102 +428,23 @@ loadAdvancdedData <- function(yr_start, yr_end, normalize) {
   # remove rows with missing observations
   df <- df[complete.cases(df),]
   
-  # # normalize data
-  # if (normalize==TRUE){
-  #   for (year in levels(as.factor(df$Season))) {
-  #     for (i in c(4,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27)) {
-  #       df.yr_subset <- df[which(df$Season==year),]
-  #       df[which(df$Season==year),][,i]<-df.yr_subset[,i]/max(df.yr_subset[,i])
-  #       df[,i]<-round(df[,i], digits = 3)
-  #     }
-  #   }
-  # }
-  
   # fix team formatting: map team abbreviations with full team name
   # standings have full team name, player stats have abbreviated
-  abbrev <-
-    c(
-      "ATL",
-      "BOS",
-      "BRK",
-      "CHA",
-      "CHH",
-      "CHI",
-      "CHO",
-      "CLE",
-      "DAL",
-      "DEN",
-      "DET",
-      "GSW",
-      "HOU",
-      "IND",
-      "LAC",
-      "LAL",
-      "MEM",
-      "MIA",
-      "MIL",
-      "MIN",
-      "NJN",
-      "NOH",
-      "NOK",
-      "NOP",
-      "NYK",
-      "OKC",
-      "ORL",
-      "PHI",
-      "PHO",
-      "POR",
-      "SAC",
-      "SAS",
-      "SEA",
-      "TOR",
-      "UTA",
-      "VAN",
-      "WAS",
-      "WSB"
-    )
+  abbrev <- c("ATL","BOS","BRK","CHA","CHH","CHI","CHO","CLE","DAL","DEN","DET","GSW","HOU",
+              "IND","LAC","LAL","MEM","MIA","MIL","MIN","NJN","NOH","NOK","NOP","NYK","OKC",
+              "ORL","PHI","PHO","POR","SAC","SAS","SEA","TOR","UTA","VAN","WAS","WSB")
   
-  fullnames <-
-    c(
-      "Atlanta Hawks",
-      "Boston Celtics",
-      "Brooklyn Nets",
-      "Charlotte Bobcats",
-      "Charlotte Hornets",
-      "Chicago Bulls",
-      "Charlotte Hornets",
-      "Cleveland Cavaliers",
-      "Dallas Mavericks",
-      "Denver Nuggets",
-      "Detroit Pistons",
-      "Golden State Warriors",
-      "Houston Rockets",
-      "Indiana Pacers",
-      "Los Angeles Clippers",
-      "Los Angeles Lakers",
-      "Memphis Grizzlies",
-      "Miami Heat",
-      "Milwaukee Bucks",
-      "Minnesota Timberwolves",
-      "New Jersey Nets",
-      "New Orleans Hornets",
-      "New Orleans/Oklahoma City Hornets",
-      "New Orleans Pelicans",
-      "New York Knicks",
-      "Oklahoma City Thunder",
-      "Orlando Magic",
-      "Philadelphia 76ers",
-      "Phoenix Suns",
-      "Portland Trail Blazers",
-      "Sacramento Kings",
-      "San Antonio Spurs",
-      "Seattle SuperSonics",
-      "Toronto Raptors",
-      "Utah Jazz",
-      "Vancouver Grizzlies",
-      "Washington Wizards",
-      "Washington Bullets"
-    )
+  fullnames <- c("Atlanta Hawks","Boston Celtics","Brooklyn Nets","Charlotte Bobcats",
+                 "Charlotte Hornets","Chicago Bulls","Charlotte Hornets","Cleveland Cavaliers",
+                 "Dallas Mavericks","Denver Nuggets","Detroit Pistons","Golden State Warriors",
+                 "Houston Rockets","Indiana Pacers","Los Angeles Clippers","Los Angeles Lakers",
+                 "Memphis Grizzlies","Miami Heat","Milwaukee Bucks","Minnesota Timberwolves",
+                 "New Jersey Nets","New Orleans Hornets","New Orleans/Oklahoma City Hornets",
+                 "New Orleans Pelicans","New York Knicks","Oklahoma City Thunder","Orlando Magic",
+                 "Philadelphia 76ers","Phoenix Suns","Portland Trail Blazers","Sacramento Kings",
+                 "San Antonio Spurs","Seattle SuperSonics","Toronto Raptors","Utah Jazz",
+                 "Vancouver Grizzlies","Washington Wizards","Washington Bullets")
+  # index full team names by its abbreviation
   names(fullnames) <- abbrev
   
   # add team wins to player data
@@ -652,18 +452,16 @@ loadAdvancdedData <- function(yr_start, yr_end, normalize) {
   for (team_abbrev in levels(as.factor(df$Tm))) {
     for (season in levels(as.factor(df$Season))) {
       team_name <- fullnames[team_abbrev]
-      team_roster <-
-        df[which(as.character(df$Tm) == team_abbrev &
-                   as.character(df$Season) == season), ]
+      # get all players on the team during that season
+      team_roster <- df[which(as.character(df$Tm) == team_abbrev &
+                              as.character(df$Season) == season), ]
       if (dim(team_roster)[1] != 0) {
-        team_roster$TeamWins <-
-          data_standings[which(
-            as.character(data_standings$Team) == team_name &
-              as.character(data_standings$Season) == season
-          ), ]$Wins
+        # assign team wins from data_standings dataframe to roster
+        team_roster$TeamWins <- data_standings[which(as.character(data_standings$Team) == team_name &
+                                                     as.character(data_standings$Season) == season), ]$Wins
       }
-      df[which(as.character(df$Tm) == team_abbrev &
-                 as.character(df$Season) == season), ] <- team_roster
+      # overrite roster in df with team wins
+      df[which(as.character(df$Tm) == team_abbrev & as.character(df$Season) == season), ] <- team_roster
     }
   }
   df$TeamWins <- type.convert(df$TeamWins)
@@ -686,47 +484,19 @@ loadAdvancdedData <- function(yr_start, yr_end, normalize) {
 ################   Load Player Stats Total Data   ################
 ################      Calculate Career Stats      ################
 ##################################################################
-loadCareerData <- function(yr_start, yr_end, normalize) {
-  df <-
-    data.frame(
-      Rk = integer(),
-      Player = character(),
-      Pos = character(),
-      Age = double(),
-      Tm = character(),
-      GP = double(),
-      GS = double(),
-      MP = double(),
-      FGM = double(),
-      FGA = double(),
-      FGperc = double(),
-      ThreePM = double(),
-      ThreePA = double(),
-      ThreePperc = double(),
-      TwoPM = double(),
-      TwoPA = double(),
-      TwoPperc = double(),
-      eFGperc = double(),
-      FTM = double(),
-      FTA = double(),
-      FTperc = double(),
-      ORB = double(),
-      DRB = double(),
-      TRB = double(),
-      AST = double(),
-      STL = double(),
-      BLK = double(),
-      TOV = double(),
-      PF = double(),
-      PTS = double(),
-      Season = integer()
-    )
+loadCareerData <- function(yr_start, yr_end) {
+  df <- data.frame(Rk = integer(),Player = character(),Pos = character(),Age = double(),Tm = character(),
+                   GP = double(),GS = double(),MP = double(),FGM = double(),FGA = double(),FGperc = double(),
+                   ThreePM = double(),ThreePA = double(),ThreePperc = double(),TwoPM = double(),TwoPA = double(),
+                   TwoPperc = double(),eFGperc = double(),FTM = double(),FTA = double(),FTperc = double(),
+                   ORB = double(),DRB = double(),TRB = double(),AST = double(),STL = double(),BLK = double(),
+                   TOV = double(),PF = double(),PTS = double(),Season = integer())
   
   # loop through each year's csv file and load data
   for (year in yr_start:yr_end) {
     file_pth <- paste("player_stats_totals/", year, ".csv", sep = "")
-    df.temp <-
-      read.csv(file_pth, header = TRUE, stringsAsFactors = FALSE)
+    df.temp <- read.csv(file_pth, header = TRUE, stringsAsFactors = FALSE)
+    
     df.temp$Season <- year
     
     # reading player names from Basketball Reference csv gives format 'Chris Paul\paulch01'
@@ -742,41 +512,14 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
     }
     
     # rename column names
-    df.temp <-
-      data.frame(
-        Rk = df.temp$Rk,
-        Player = df.temp$Player,
-        Pos = df.temp$Pos,
-        Age = df.temp$Age,
-        Tm = df.temp$Tm,
-        GP = df.temp$G,
-        GS = df.temp$GS,
-        MP = df.temp$MP,
-        FGM = df.temp$FG,
-        FGA = df.temp$FGA,
-        FGperc = df.temp$FG.,
-        ThreePM = df.temp$X3P,
-        ThreePA = df.temp$X3PA,
-        ThreePperc = df.temp$X3P.,
-        TwoPM = df.temp$X2P,
-        TwoPA = df.temp$X2PA,
-        TwoPperc = df.temp$X2P.,
-        eFGperc = df.temp$eFG.,
-        FTM = df.temp$FT,
-        FTA = df.temp$FTA,
-        FTperc = df.temp$FT.,
-        ORB = df.temp$ORB,
-        DRB = df.temp$DRB,
-        TRB = df.temp$TRB,
-        AST = df.temp$AST,
-        STL = df.temp$STL,
-        BLK = df.temp$BLK,
-        TOV = df.temp$TOV,
-        PF = df.temp$PF,
-        PTS = df.temp$PTS,
-        Season = df.temp$Season,
-        stringsAsFactors = FALSE
-      )
+    df.temp <- data.frame(Rk = df.temp$Rk,Player = df.temp$Player,Pos = df.temp$Pos,Age = df.temp$Age,
+                          Tm = df.temp$Tm,GP = df.temp$G,GS = df.temp$GS,MP = df.temp$MP,FGM = df.temp$FG,
+                          FGA = df.temp$FGA,FGperc = df.temp$FG.,ThreePM = df.temp$X3P,ThreePA = df.temp$X3PA,
+                          ThreePperc = df.temp$X3P.,TwoPM = df.temp$X2P,TwoPA = df.temp$X2PA,TwoPperc = df.temp$X2P.,
+                          eFGperc = df.temp$eFG.,FTM = df.temp$FT,FTA = df.temp$FTA,FTperc = df.temp$FT.,
+                          ORB = df.temp$ORB,DRB = df.temp$DRB,TRB = df.temp$TRB,AST = df.temp$AST,STL = df.temp$STL,
+                          BLK = df.temp$BLK,TOV = df.temp$TOV,PF = df.temp$PF,PTS = df.temp$PTS,Season = df.temp$Season,
+                          stringsAsFactors = FALSE)
     
     # combine all seasons into one large data frame
     df <- data.frame(rbind(df, df.temp))
@@ -790,13 +533,11 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
   df$AllNba <- FALSE
   df$TotalAllNba <- 0
   for (i in 1:dim(winners)[1]) {
-    df[which(
-      as.character(df$Player) == as.character(winners$Player[i]) &
-        as.integer(df$Season) == winners$Season[i]
+    df[which(as.character(df$Player) == as.character(winners$Player[i]) &
+             as.integer(df$Season) == winners$Season[i]
     ), ]$AllNba <- TRUE
-    df[which(
-      as.character(df$Player) == as.character(winners$Player[i]) &
-        as.integer(df$Season) == winners$Season[i]
+    df[which(as.character(df$Player) == as.character(winners$Player[i]) &
+             as.integer(df$Season) == winners$Season[i]
     ), ]$TotalAllNba <- 1
   }
   
@@ -804,103 +545,24 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
   df <- df[which(df$Tm != "TOT"), ]
   # remove rows with missing observations
   df <- df[complete.cases(df),]
-  
-  # # normalize data
-  # if (normalize==TRUE){
-  #   for (year in levels(as.factor(df$Season))) {
-  #     for (i in c(4,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30)) {
-  #       df.yr_subset <- df[which(df$Season==year),]
-  #       df[which(df$Season==year),][,i]<-df.yr_subset[,i]/max(df.yr_subset[,i])
-  #       df[,i]<-round(df[,i], digits = 3)
-  #     }
-  #   }
-  # }
-  
+
   # fix team formatting: map team abbreviations with full team name
   # standings have full team name, player stats have abbreviated
-  abbrev <-
-    c(
-      "ATL",
-      "BOS",
-      "BRK",
-      "CHA",
-      "CHH",
-      "CHI",
-      "CHO",
-      "CLE",
-      "DAL",
-      "DEN",
-      "DET",
-      "GSW",
-      "HOU",
-      "IND",
-      "LAC",
-      "LAL",
-      "MEM",
-      "MIA",
-      "MIL",
-      "MIN",
-      "NJN",
-      "NOH",
-      "NOK",
-      "NOP",
-      "NYK",
-      "OKC",
-      "ORL",
-      "PHI",
-      "PHO",
-      "POR",
-      "SAC",
-      "SAS",
-      "SEA",
-      "TOR",
-      "UTA",
-      "VAN",
-      "WAS",
-      "WSB"
-    )
+  abbrev <- c("ATL","BOS","BRK","CHA","CHH","CHI","CHO","CLE","DAL","DEN","DET","GSW","HOU",
+              "IND","LAC","LAL","MEM","MIA","MIL","MIN","NJN","NOH","NOK","NOP","NYK","OKC",
+              "ORL","PHI","PHO","POR","SAC","SAS","SEA","TOR","UTA","VAN","WAS","WSB")
   
-  fullnames <-
-    c(
-      "Atlanta Hawks",
-      "Boston Celtics",
-      "Brooklyn Nets",
-      "Charlotte Bobcats",
-      "Charlotte Hornets",
-      "Chicago Bulls",
-      "Charlotte Hornets",
-      "Cleveland Cavaliers",
-      "Dallas Mavericks",
-      "Denver Nuggets",
-      "Detroit Pistons",
-      "Golden State Warriors",
-      "Houston Rockets",
-      "Indiana Pacers",
-      "Los Angeles Clippers",
-      "Los Angeles Lakers",
-      "Memphis Grizzlies",
-      "Miami Heat",
-      "Milwaukee Bucks",
-      "Minnesota Timberwolves",
-      "New Jersey Nets",
-      "New Orleans Hornets",
-      "New Orleans/Oklahoma City Hornets",
-      "New Orleans Pelicans",
-      "New York Knicks",
-      "Oklahoma City Thunder",
-      "Orlando Magic",
-      "Philadelphia 76ers",
-      "Phoenix Suns",
-      "Portland Trail Blazers",
-      "Sacramento Kings",
-      "San Antonio Spurs",
-      "Seattle SuperSonics",
-      "Toronto Raptors",
-      "Utah Jazz",
-      "Vancouver Grizzlies",
-      "Washington Wizards",
-      "Washington Bullets"
-    )
+  fullnames <- c("Atlanta Hawks","Boston Celtics","Brooklyn Nets","Charlotte Bobcats",
+                 "Charlotte Hornets","Chicago Bulls","Charlotte Hornets","Cleveland Cavaliers",
+                 "Dallas Mavericks","Denver Nuggets","Detroit Pistons","Golden State Warriors",
+                 "Houston Rockets","Indiana Pacers","Los Angeles Clippers","Los Angeles Lakers",
+                 "Memphis Grizzlies","Miami Heat","Milwaukee Bucks","Minnesota Timberwolves",
+                 "New Jersey Nets","New Orleans Hornets","New Orleans/Oklahoma City Hornets",
+                 "New Orleans Pelicans","New York Knicks","Oklahoma City Thunder","Orlando Magic",
+                 "Philadelphia 76ers","Phoenix Suns","Portland Trail Blazers","Sacramento Kings",
+                 "San Antonio Spurs","Seattle SuperSonics","Toronto Raptors","Utah Jazz",
+                 "Vancouver Grizzlies","Washington Wizards","Washington Bullets")
+  # index full team names by its abbreviation
   names(fullnames) <- abbrev
   
   # add team wins to player data
@@ -908,18 +570,16 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
   for (team_abbrev in levels(as.factor(df$Tm))) {
     for (season in levels(as.factor(df$Season))) {
       team_name <- fullnames[team_abbrev]
-      team_roster <-
-        df[which(as.character(df$Tm) == team_abbrev &
-                   as.character(df$Season) == season), ]
+      # get all players on the team during that season
+      team_roster <- df[which(as.character(df$Tm) == team_abbrev & 
+                              as.character(df$Season) == season), ]
       if (dim(team_roster)[1] != 0) {
-        team_roster$TeamWins <-
-          data_standings[which(
-            as.character(data_standings$Team) == team_name &
-              as.character(data_standings$Season) == season
-          ), ]$Wins
+        # assign team wins from data_standings dataframe to roster
+        team_roster$TeamWins <- data_standings[which(as.character(data_standings$Team) == team_name &
+                                                     as.character(data_standings$Season) == season), ]$Wins
       }
-      df[which(as.character(df$Tm) == team_abbrev &
-                 as.character(df$Season) == season), ] <- team_roster
+      # overrite roster in df with team wins
+      df[which(as.character(df$Tm) == team_abbrev & as.character(df$Season) == season), ] <- team_roster
     }
   }
   df$TeamWins <- type.convert(df$TeamWins)
@@ -933,129 +593,40 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
     df[which(as.character(df$Pos) == positions[i]), ]$PosNum <- i
   }
   
-  df.cum <- df %>%
-    select(
-      Rk,
-      Player,
-      Pos,
-      Age,
-      Tm,
-      GP,
-      GS,
-      MP,
-      FGM,
-      FGA,
-      ThreePM,
-      ThreePA,
-      TwoPM,
-      TwoPA,
-      FTM,
-      FTA,
-      ORB,
-      DRB,
-      TRB,
-      AST,
-      STL,
-      BLK,
-      TOV,
-      PF,
-      PTS,
-      Season,
-      AllNba,
-      TotalAllNba,
-      TeamWins,
-      PosNum
-    ) %>%
-    group_by(Player, Season) %>%
-    arrange(Player, Season) %>%
-    summarise(
-      GP = sum(GP),
-      GS = sum(GS),
-      MP = sum(MP),
-      FGM = sum(FGM),
-      FGA = sum(FGA),
-      ThreePM = sum(ThreePM),
-      ThreePA = sum(ThreePA),
-      TwoPM = sum(TwoPM),
-      TwoPA = sum(TwoPA),
-      FTM = sum(FTM),
-      FTA = sum(FTA),
-      ORB = sum(ORB),
-      DRB = sum(DRB),
-      TRB = sum(TRB),
-      AST = sum(AST),
-      STL = sum(STL),
-      BLK = sum(BLK),
-      TOV = sum(TOV),
-      PF = sum(PF),
-      PTS = sum(PTS),
-      TotalAllNba = sum(TotalAllNba),
-      TeamWins = sum(TeamWins)
-    ) %>%
-    mutate(
-      cumGP = cumsum(GP),
-      cumGS = cumsum(GS),
-      cumMP = cumsum(MP),
-      cumFGM = cumsum(FGM),
-      cumFGA = cumsum(FGA),
-      cumThreePM = cumsum(ThreePM),
-      cumThreePA = cumsum(ThreePA),
-      cumTwoPM = cumsum(TwoPM),
-      cumTwoPA = cumsum(TwoPA),
-      cumFTM = cumsum(FTM),
-      cumFTA = cumsum(FTA),
-      cumORB = cumsum(ORB),
-      cumDRB = cumsum(DRB),
-      cumTRB = cumsum(TRB),
-      cumAST = cumsum(AST),
-      cumSTL = cumsum(STL),
-      cumBLK = cumsum(BLK),
-      cumTOV = cumsum(TOV),
-      cumPF = cumsum(PF),
-      cumPTS = cumsum(PTS),
-      cumTotalAllNba = cumsum(TotalAllNba),
-      cumTeamWins = cumsum(TeamWins)
-    ) %>%
-    mutate(
-      FGperc = cumsum(FGM) / cumsum(FGA),
-      ThreePperc = cumsum(ThreePM) / cumsum(ThreePA),
-      TwoPperc = cumsum(TwoPM) / cumsum(TwoPA),
-      FTperc = cumsum(FTM) / cumsum(FTA),
-      eFGperc = (cumsum(FGM) + 0.5 * cumsum(ThreePM)) / cumsum(FGA)
-    )
-  df.cum <-
-    data.frame(
-      Player = df.cum$Player,
-      GP = df.cum$cumGP,
-      GS = df.cum$cumGS,
-      MP = df.cum$cumMP,
-      FGM = df.cum$cumFGM,
-      FGA = df.cum$cumFGA,
-      FGperc = df.cum$FGperc,
-      ThreePM = df.cum$ThreePM,
-      ThreePA = df.cum$cumThreePA,
-      ThreePperc = df.cum$ThreePperc,
-      TwoPM = df.cum$cumTwoPM,
-      TwoPA = df.cum$cumTwoPA,
-      TwoPperc = df.cum$TwoPperc,
-      eFGperc = df.cum$eFGperc,
-      FTM = df.cum$cumFTM,
-      FTA = df.cum$cumFTA,
-      FTperc = df.cum$FTperc,
-      ORB = df.cum$cumORB,
-      DRB = df.cum$cumDRB,
-      TRB = df.cum$cumTRB,
-      AST = df.cum$cumAST,
-      STL = df.cum$cumSTL,
-      BLK = df.cum$cumBLK,
-      TOV = df.cum$cumTOV,
-      PF = df.cum$cumPF,
-      PTS = df.cum$cumPTS,
-      Season = df.cum$Season,
-      TotalAllNba = df.cum$cumTotalAllNba,
-      TeamWins = df.cum$cumTeamWins,
-      stringsAsFactors = FALSE
-    )
+  # now want to calculate career totals for each player after each season
+  df.cum <- df %>% 
+            select(Rk,Player,Pos,Age,Tm,GP,GS,MP,FGM,FGA,ThreePM,ThreePA,TwoPM,TwoPA,FTM,FTA,
+                   ORB,DRB,TRB,AST,STL,BLK,TOV,PF,PTS,Season,AllNba,TotalAllNba,TeamWins,PosNum) %>%
+            group_by(Player, Season) %>%
+            arrange(Player, Season) %>%
+            summarise(GP = sum(GP),GS = sum(GS),MP = sum(MP),FGM = sum(FGM),FGA = sum(FGA),
+                      ThreePM = sum(ThreePM),ThreePA = sum(ThreePA),TwoPM = sum(TwoPM),
+                      TwoPA = sum(TwoPA),FTM = sum(FTM),FTA = sum(FTA),ORB = sum(ORB),
+                      DRB = sum(DRB),TRB = sum(TRB),AST = sum(AST),STL = sum(STL),BLK = sum(BLK),
+                      TOV = sum(TOV),PF = sum(PF),PTS = sum(PTS),TotalAllNba = sum(TotalAllNba),
+                      TeamWins = sum(TeamWins)) %>%
+            mutate(cumGP = cumsum(GP),cumGS = cumsum(GS),cumMP = cumsum(MP),cumFGM = cumsum(FGM),
+                   cumFGA = cumsum(FGA),cumThreePM = cumsum(ThreePM),cumThreePA = cumsum(ThreePA),
+                   cumTwoPM = cumsum(TwoPM),cumTwoPA = cumsum(TwoPA),cumFTM = cumsum(FTM),
+                   cumFTA = cumsum(FTA),cumORB = cumsum(ORB),cumDRB = cumsum(DRB),cumTRB = cumsum(TRB),
+                   cumAST = cumsum(AST),cumSTL = cumsum(STL),cumBLK = cumsum(BLK),cumTOV = cumsum(TOV),
+                   cumPF = cumsum(PF),cumPTS = cumsum(PTS),cumTotalAllNba = cumsum(TotalAllNba),
+                   cumTeamWins = cumsum(TeamWins)) %>%
+            mutate(FGperc = cumsum(FGM) / cumsum(FGA),ThreePperc = cumsum(ThreePM) / cumsum(ThreePA),
+                   TwoPperc = cumsum(TwoPM) / cumsum(TwoPA),FTperc = cumsum(FTM) / cumsum(FTA),
+                   eFGperc = (cumsum(FGM) + 0.5 * cumsum(ThreePM)) / cumsum(FGA))
+  
+  df.cum <- data.frame(Player = df.cum$Player,GP = df.cum$cumGP,GS = df.cum$cumGS,MP = df.cum$cumMP,
+                       FGM = df.cum$cumFGM,FGA = df.cum$cumFGA,FGperc = df.cum$FGperc,ThreePM = df.cum$ThreePM,
+                       ThreePA = df.cum$cumThreePA,ThreePperc = df.cum$ThreePperc,TwoPM = df.cum$cumTwoPM,
+                       TwoPA = df.cum$cumTwoPA,TwoPperc = df.cum$TwoPperc,eFGperc = df.cum$eFGperc,
+                       FTM = df.cum$cumFTM,FTA = df.cum$cumFTA,FTperc = df.cum$FTperc,ORB = df.cum$cumORB,
+                       DRB = df.cum$cumDRB,TRB = df.cum$cumTRB,AST = df.cum$cumAST,STL = df.cum$cumSTL,
+                       BLK = df.cum$cumBLK,TOV = df.cum$cumTOV,PF = df.cum$cumPF,PTS = df.cum$cumPTS,
+                       Season = df.cum$Season,TotalAllNba = df.cum$cumTotalAllNba,TeamWins = df.cum$cumTeamWins,
+                       stringsAsFactors = FALSE)
+  
+  # add back the data that got dropped from the cumulative sum
   df.cum$Rk <- 0
   df.cum$Pos <- ""
   df.cum$Age <- 0
@@ -1064,32 +635,27 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
   df.cum$AllNba <- FALSE
   for (player in levels(as.factor(df.cum$Player))) {
     for (season in levels(as.factor(df.cum$Season[which(df.cum$Player == player)]))) {
-      player.cum <-
-        df.cum[which(df.cum$Player == player & df.cum$Season == season), ]
-      player.cum$Rk <-
-        tail(df[which(as.character(df$Player) == player &
-                        as.character(df$Season) == season), ]$Rk, n = 1)
-      player.cum$Pos <-
-        as.character(tail(df[which(as.character(df$Player) == player &
-                                     as.character(df$Season) == season), ]$Pos, n = 1))
-      player.cum$Age <-
-        tail(df[which(as.character(df$Player) == player &
-                        as.character(df$Season) == season), ]$Age, n = 1)
-      player.cum$Tm <-
-        as.character(tail(df[which(as.character(df$Player) == player &
-                                     as.character(df$Season) == season), ]$Tm, n = 1))
-      player.cum$PosNum <-
-        tail(df[which(as.character(df$Player) == player &
-                        as.character(df$Season) == season), ]$PosNum, n = 1)
-      player.cum$AllNba <-
-        tail(df[which(as.character(df$Player) == player &
-                        as.character(df$Season) == season), ]$AllNba, n = 1)
-      df.cum[which(as.character(df.cum$Player) == player &
-                     as.character(df.cum$Season) == season), ] <- player.cum
+      player.cum <- df.cum[which(df.cum$Player == player & df.cum$Season == season), ]
+      player.cum$Rk <- tail(df[which(as.character(df$Player) == player &
+                                     as.character(df$Season) == season), ]$Rk, n = 1)
+      player.cum$Pos <- as.character(tail(df[which(as.character(df$Player) == player &
+                                                   as.character(df$Season) == season), ]$Pos, n = 1))
+      player.cum$Age <- tail(df[which(as.character(df$Player) == player &
+                                      as.character(df$Season) == season), ]$Age, n = 1)
+      player.cum$Tm <- as.character(tail(df[which(as.character(df$Player) == player &
+                                                  as.character(df$Season) == season), ]$Tm, n = 1))
+      player.cum$PosNum <- tail(df[which(as.character(df$Player) == player &
+                                         as.character(df$Season) == season), ]$PosNum, n = 1)
+      player.cum$AllNba <- tail(df[which(as.character(df$Player) == player &
+                                         as.character(df$Season) == season), ]$AllNba, n = 1)
+      df.cum[which(as.character(df.cum$Player) == player & 
+                   as.character(df.cum$Season) == season), ] <- player.cum
     }
   }
   
   df.cum <- df.cum[, c(30, 1, 31, 34, 27, 35, 28, 29, 32, 33, 2:26), ]
+  
+  # only care about about players and ALl-NBA players after 2000
   df.cum <- df.cum[which(df.cum$Season >= 2000), ]
   
   return(df.cum)
@@ -1098,10 +664,10 @@ loadCareerData <- function(yr_start, yr_end, normalize) {
 # load all data in from Basketball Reference (basketball-reference.com)
 data_standings <- loadStandingsData(YEAR_START, YEAR_END)
 data_all_nba <- loadAwardsData()
-data_player_totals <- loadTotalsData(2000, YEAR_END, TRUE)
-data_player_pergame <- loadPerGameData(2000, YEAR_END, TRUE)
-data_player_adv <- loadAdvancdedData(2000, YEAR_END, TRUE)
-data_player_career <- loadCareerData(YEAR_START, YEAR_END, TRUE)
+data_player_totals <- loadTotalsData(2000, YEAR_END)
+data_player_pergame <- loadPerGameData(2000, YEAR_END)
+data_player_adv <- loadAdvancdedData(2000, YEAR_END)
+data_player_career <- loadCareerData(YEAR_START, YEAR_END)
 
 head(data_standings[sample(nrow(data_standings), 10), ], 10)
 head(data_all_nba[sample(nrow(data_all_nba), 10), ], 10)
@@ -1110,7 +676,7 @@ head(data_player_pergame[sample(nrow(data_player_pergame), 10), ], 10)
 head(data_player_adv[sample(nrow(data_player_adv), 10), ], 10)
 head(data_player_career[sample(nrow(data_player_career), 10), ], 10)
 ````
-Data was collected from the well known third-party Basketball Reference website. I chose to collect data from this source
+Data was collected from the well known third-party Basketball-Reference.com. I chose to collect data from this source
 because of its comprehensive database of historical player and team statistics, as well as the easy accesiblity
 (Basketball Reference allows me to download the data as CSV files). The data is well formatted and only minor processing
 is required. I collected data from the 1985-1986 NBA season up until the 2018-2019 season, including season team standings,
